[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemigp.gd" type="Script" id=1]
[ext_resource path="res://sonidos/Ladrido.wav" type="AudioStream" id=2]
[ext_resource path="res://Obstaculos/perro1.png" type="Texture" id=3]
[ext_resource path="res://Obstaculos/perro2.png" type="Texture" id=4]
[ext_resource path="res://Obstaculos/perro3.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 32.7275
height = 61.0189

[sub_resource type="CapsuleShape2D" id=3]
radius = 35.6061
height = 69.4747

[node name="enemigp" type="KinematicBody2D" groups=[
"enemi",
]]
position = Vector2( 740.157, 536.218 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.495, 0.574 )
frames = SubResource( 1 )
playing = true

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 3 )

[node name="tiemp" type="Timer" parent="."]
wait_time = 2.0

[node name="ladra" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="ladrid" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 2.0
autoplay = true
max_distance = 1000.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="tiemp" to="." method="_on_tiemp_timeout"]
[connection signal="timeout" from="ladra" to="." method="_on_ladra_timeout"]
